Mon Mar  9 01:01:41 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkrc.c: No, you can't add a GtkStyle * to a
	  list of GtkRcNode *. (Fixes huge performance problem)
	  Plus, don't bother creating a new style unless style
	  actually has bg pixmaps.

Sun Mar  8 15:53:33 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtktext.c: 

	- Show selection correctly when starting selection with arrows

	- Display pixmap background only when not editable

	- Redraw focus area more carefully to prevent flashing (and
	  make style of drawing consistent with Entry)

	* gtk/gtktreeitem.c: ref colormaps for pixmap by colormap
	  storage.
	
	* gtk/gtkrc.c: Store a separate style for each RcStyle for
	  each colormap, so we can handle background pixmaps 
	  correctly, which need to be per-colormap. (Leaks
	  colormaps...)

	  Parse text color style entries correctly.

	* gtk/testgtk.c: insert text without fg color
	  gtk/testgtkrc: move "*" after rest, so the other class styles
	                 take effect

        * gdk/gdkwindow.c gdk/gdk.c gdk/gdkprivate.h: Send DND events
	  safely, in case drop window disappears. (Performance hit
	  because XSync()'s are necessary)

	* gdk/gdk.h gdk/gdkpixmap.c: Added 
	  gdk_pixmap_colormap_create_from_xpm[_d] to allow creating
	  pixmaps from xpm's before you have a GdkWindow.
	
Sun Mar  8 12:33:38 PST 1998 Jay Painter <jpaint@serv.net>
	
	* gtk/gtkclist.c: the GList clist->selection now contains row indexes
	  in the data portion of the linked list structure instead of pointers,
	  fixed several bugs with the different selection modes

	* gtk/testgtk.c: displays information for unselect events, and prints the list
	  of selected rows

Sun Mar  8 13:03:22 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkrange.h: removed gtk_range_calc_value().

Sun Mar  8 04:22:36 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkfilesel.c: applied gtk-gronlund-980307.patch.gz which
	  fixes a memory leak by making use of gtk_clist_set_row_data_full.
