@@ -1,3 +1,10 @@
+Mon Mar  9 08:07:01 1998  Tim Janik  <timj@gimp.org>
+
+	* gtk/gtkspinbutton.h: 
+	* gtk/gtkspinbutton.c:
+	applied gtk-hamann_jeske-980308-0.patch.gz to have a
+ 	gtk_spin_button_construct() function
+
 Mon Mar  9 01:01:41 1998  Owen Taylor  <owt1@cornell.edu>
 
 	* gtk/gtkrc.c: No, you can't add a GtkStyle * to a
